# ZoeHackathon

./: .env.example  .gitignore  COLOUR_CODE.md  PERSONALISATION_QUESTIONS.md  README.md  app.py  config.py  history.py  ingest.py  llm.py  pyproject.toml  rag.py  sources.py  transcribe.py
backend/: api.py
data/docs/john_hopkins/: pmos_diet.md
data/docs/nhs/: pmos.md  pmos_diet_stgeorges.md
data/docs/papers/: Diet_lifestyle.md  Management_Nordic_perspective.md  PCOS_Book.md  berberine.md  berberine2.md  coenzymes.md  coq10_vite.md  dairy.md  dairy_hormones.md  diet_and_nutrition.md  exercises.md  fiber.md  gluten.md  gluten_gut.md  herbal.md  howtoeatforyourcycle.md  lifestyle_changes.md  lifestyle_management.md  low calorie_diet.md  low glycemic.md  lowstarch_lowdairy.md  management_of_pmos_patients.md  med.md  med_diet.md  nice_guidelines.md  nutritional_study.md  physical_activity.md  pmos_diet.md  pmos_mental_health.md  pmos_sleep.md  pmos_supplements.md  supplement_ox.md  time_restricted.md  vitaminD.md  weight_management.md
data/docs/zoe/: README.md  affordable_nutrition.md  diet_colon_cancer.md  diet_for_gynae.md  dietary_supplements_liver.md  fiber_heart_disease.md  gynaecology_podcast.md  olive_oil.md  protein.md
designs/design_handoff_zoecheck/: README.md  ZoeCheck.dc.html
designs/react-export/: README.md  index.html  package.json
designs/react-export/src/: App.jsx  index.css
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.jsx  api.js  storage.js  styles.css
frontend/src/screens/: Home.jsx  (+12 more)
(+12 files in other folders)
