[project]
name = "health-claim-checker"
version = "0.1.0"
description = "Transcribe spoken audio, extract health claims, and fact-check them against trusted sources (NHS, WHO, ZOE) via a local RAG pipeline + Claude."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit>=1.42",
    "anthropic>=0.40",
    "faster-whisper>=1.0",
    "sentence-transformers>=3.0",
    "trafilatura>=1.8",
    "yt-dlp>=2024.8",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "torchvision>=0.27.1",
]

[tool.uv]
package = false
